# wuziqiGame

./: .gitignore  README.md  wuziqiGame.sql
wuziqiClient/: GameModel.cpp  GameModel.h  Makefile  Makefile.Debug  Makefile.Release  QtWuziqi.pro  chessboardwidget.cpp  chessboardwidget.h  chessboardwidget.ui  gamedialog.cpp  gamedialog.h  gamedialog.ui  gamelobbydialog.cpp  gamelobbydialog.h  gamelobbydialog.ui  gameroomwidgetitem.cpp  gameroomwidgetitem.h  gameroomwidgetitem.ui  main.cpp  (+20 more)
wuziqiServer/: CMakeLists.txt  certificate.pem  privkey.pem  signreq.csr
wuziqiServer/.cache/clangd/index/: GameRoom.cpp.8EB6105A592D469E.idx  GameRoom.h.57F17FB81D5F5C7B.idx  Mysql.cpp.48E5876FD535B50B.idx  Mysql.h.C7891F5D79B2D2F1.idx  TCPKernel.cpp.CA53650604B2ECE2.idx  TCPKernel.h.E824A39D1E4F881F.idx  Thread_pool.cpp.407BB90EFAD837E1.idx  Thread_pool.h.B7AC13750A432385.idx  Timer.cpp.EB0A71BC722F0E78.idx  Timer.h.31FF7E99B8F4B32D.idx  block_epoll_net.cpp.D9C789BAA7EC9986.idx  block_epoll_net.h.3C762C9C3928136D.idx  clogic.cpp.C0547CAF8E2A1A51.idx  clogic.h.D7189DF05FB5E970.idx  dataModel.cpp.00EC08FEB9124F8B.idx  dataModel.h.096BFEA1FBBDCFBE.idx  err_str.cpp.CF829931896C7E69.idx  err_str.h.5C1FE7B831016D94.idx  main.cpp.FE91045CD3DA7BD1.idx  packdef.h.B13A5AD3D720069E.idx  redisConn.h.6156DF3C3822F3F5.idx
wuziqiServer/include/: GameRoom.h  Mysql.h  TCPKernel.h  Timer.h  block_epoll_net.h  clogic.h  dataModel.h  packdef.h  redisConn.h
wuziqiServer/src/: GameRoom.cpp  Mysql.cpp  TCPKernel.cpp  Thread_pool.cpp  Timer.cpp  block_epoll_net.cpp  clogic.cpp  dataModel.cpp  main.cpp
(+248 files in other folders)
